# Mesh-Vpn

./: .gitignore  AUDIT_PLAN.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md  SETUP.md  SKILL.md  node.example.toml  soak_test.sh  test_coordination.sh  test_mesh.sh
.github/workflows/: build.yml  ci.yml
desktop-app/: index.html  package-lock.json
desktop-app/src/: App.css  App.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ipv4_subnet_parse.rs  parse_ipv4_header.rs
src/: config.rs  control.rs  coordinator.rs  daemon.rs  lib.rs  main.rs  metrics.rs  nat.rs  packet.rs  peer.rs  relay.rs  session.rs  types.rs
