[package]
name = "araxmesh"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tun-rs = { version = "2", features = ["async"] }
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
hex = "0.4"
snow = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"


