[package]
name = "araxmesh"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
tokio-util = { version = "0.7", features = ["full"] }
tun-rs = { version = "2", features = ["async"] }
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
hex = "0.4"
snow = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
axum = "0.7"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = { version = "1.8", features = ["derive"] }




